# TinyFA

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmarks/: benchmark.py
cmake/: TinyFAConfig.cmake.in
csrc/binding/: flash_attn_binding.cu
csrc/flash_attn/: config.cuh  flash_api.cuh  launcher.cuh  params.cuh  ptx.cuh  utils.cuh
csrc/flash_attn/fma/: gemm.cuh  kernel.cuh  layout.cuh  memory.cuh  softmax.cuh  tile.cuh
csrc/flash_attn/kernels/: kernel_sources.cmake  tfa_fwd_bf16_sm75.cu  tfa_fwd_bf16_sm80.cu  tfa_fwd_bf16_sm8x.cu  tfa_fwd_fp16_sm75.cu  tfa_fwd_fp16_sm80.cu  tfa_fwd_fp16_sm8x.cu  tfa_fwd_fp32_sm75.cu  tfa_fwd_fp32_sm80.cu  tfa_fwd_fp32_sm8x.cu
csrc/flash_attn/mma/: gemm.cuh  kernel.cuh  layout.cuh  memory.cuh  softmax.cuh
examples/basic/: CMakeLists.txt  main.cu
python/: pyproject.toml  setup.py
python/tiny_flash_attn/: __init__.py
tests/cpp/: CMakeLists.txt  cpu_reference.h  test.cpp  test_flash_attn.cu
tools/: generate_kernels.py
